[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/QuizAnswer.gd" type="Script" id=1]
[ext_resource path="res://res/Wood15.jpg" type="Texture" id=2]
[ext_resource path="res://Interface/Buttons/BackButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/TextDisplay/LabelAdaptive.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Interactive/ScrollContainerDraggable.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/Buttons/MenuButton.tscn" type="PackedScene" id=6]

[node name="QuizAnswerRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 594.22, 826.479 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.2742
margin_top = 30.9677
margin_right = -27.7258
margin_bottom = -46.0323
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 624.0
margin_bottom = 50.0
custom_constants/separation = 30

[node name="BackButton" parent="VBoxContainer/HeaderContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 35.0
margin_bottom = 50.0

[node name="LabelLessonTitle" parent="VBoxContainer/HeaderContainer" instance=ExtResource( 4 )]
margin_left = 65.0
margin_right = 65.0
margin_bottom = 50.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 624.0
margin_bottom = 58.0

[node name="LabelQuestion" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 62.0
margin_right = 624.0
margin_bottom = 62.0

[node name="ScrollContainerAnswers" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_top = 66.0
margin_right = 624.0
margin_bottom = 723.0

[node name="VBoxContainerAnswers" type="VBoxContainer" parent="VBoxContainer/ScrollContainerAnswers"]
margin_right = 624.0
margin_bottom = 657.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 727.0
margin_right = 624.0
margin_bottom = 803.0
alignment = 1

[node name="ButtonForceIncorrect" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 6 )]
margin_left = 210.0
margin_right = 310.0
text_loc = "forceIncorrect"

[node name="ButtonForceCorrect" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 6 )]
margin_left = 314.0
margin_right = 414.0
text_loc = "forceCorrect"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 807.0
margin_right = 624.0
margin_bottom = 883.455

[node name="ButtonOnlyCorrect" parent="VBoxContainer/CenterContainer" instance=ExtResource( 6 )]
margin_left = 262.0
margin_right = 362.0
text_loc = "showOnlyCorrect"
[connection signal="pressed" from="VBoxContainer/HeaderContainer/BackButton" to="." method="go_back"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ButtonForceIncorrect" to="." method="_on_ButtonForceIncorrect_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ButtonForceCorrect" to="." method="_on_ButtonForceCorrect_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/ButtonOnlyCorrect" to="." method="_on_ButtonOnlyCorrect_pressed"]
